Bug 1183653: MediaFormatReader: returns error if no tracks are usable. r=cpearce